name:                hrange
version:             0.1.0.0
synopsis:            An experimental haskell implementation of the range query language.
description:         Please see README.md
homepage:            http://github.com/xaviershay/hrange
license:             MIT
author:              Xavier Shay
maintainer:          contact@xaviershay.com
copyright:           2016 Xavier Shay
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  ghc-options: -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib,Parser,Types,Yaml,Hrange,Hrange.Evaluator
  build-depends:       base >= 4.7 && < 5
                     , text
                     , lens
                     , mtl
                     , parsec
                     , unordered-containers
                     , hashable
                     , regex-tdfa
                     , yaml
                     , vector
                     , filepath
                     , filemanip
                     , scientific
                     , deepseq
  default-language:    Haskell2010

executable hrange-exe
  ghc-options: -Wall
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hrange
                     , deepseq
                     , pretty-show
                     , text
                     , unordered-containers
                     , hashable
                     , regex-tdfa
                     , criterion
                     , blaze-builder
                     , warp
                     , wai
                     , http-types
                     , utf8-string
                     , bytestring
                     , time
  default-language:    Haskell2010

test-suite hrange-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , filemanip
                     , filepath
                     , hashable
                     , hrange
                     , mtl
                     , parsec
                     , pretty-show
                     , directory
                     , regex-tdfa
                     , scientific
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , unordered-containers
                     , vector
                     , yaml
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/xaviershay/hrange
