name:                hrange
version:             0.1.0.0
synopsis:            An experimental haskell implementation of the range query language.
description:         Please see README.md
homepage:            http://github.com/xaviershay/hrange
license:             MIT
author:              Xavier Shay
maintainer:          contact@xaviershay.com
copyright:           2016 Xavier Shay
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  ghc-options: -Wall
  hs-source-dirs:      src
  exposed-modules:     Hrange
  other-modules:       Hrange.Evaluator
                     , Hrange.Compress
                     , Hrange.Parser
                     , Hrange.Text
                     , Hrange.Types
                     , Hrange.Yaml
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , deepseq
                     , extra
                     , filemanip
                     , filepath
                     , hashable
                     , lens
                     , mtl
                     , natural-sort
                     , parsec
                     , regex-tdfa
                     , scientific
                     , text
                     , text-format
                     , unordered-containers
                     , vector
                     , yaml
  default-language:    Haskell2010

executable hrange-server
  ghc-options: -Wall
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blaze-builder
                     , BoundedChan
                     , bytestring
                     , criterion
                     , deepseq
                     , hashable
                     , hrange
                     , http-types
                     , microtimer
                     , pretty-show
                     , regex-tdfa
                     , text
                     , text-format
                     , time
                     , utf8-string
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable ergh
  ghc-options: -Wall
  hs-source-dirs:      cli
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hrange
                     , text
                     , pretty-show
  default-language:    Haskell2010

-- These tests may depend on internal functions and types. Useful for unit and
-- quick checks.
test-suite hrange-internal-test
  -- Orphan instances are used for quickcheck definitions. No great options,
  -- https://github.com/massysett/prednote/blob/master/Where_QuickCheck.md
  -- provides a good summary.
  ghc-options: -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src,test/internal
  main-is:             Main.hs
  other-modules:       Hrange
                     , Hrange.Evaluator
                     , Hrange.Compress
                     , Hrange.Parser
                     , Hrange.Types
                     , Hrange.Yaml
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck

                     , containers
                     , deepseq
                     , extra
                     , filemanip
                     , filepath
                     , hashable
                     , lens
                     , mtl
                     , natural-sort
                     , parsec
                     , regex-tdfa
                     , scientific
                     , text
                     , text-format
                     , unordered-containers
                     , vector
                     , yaml
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- These tests may only use the public API.
test-suite hrange-test
  ghc-options: -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/functional
  main-is:             Main.hs
  build-depends:       base
                     , directory
                     , filemanip
                     , filepath
                     , hrange
                     , parsec
                     , tasty
                     , tasty-hunit
                     , text
                     , unordered-containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/xaviershay/hrange
